--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           persist-credentials: false
-      - uses: ../..
+      - uses: ./
         id: normalize
       - run: echo "${{ steps.normalize.outputs.normalizedName }}"
