--- a/action.yml
+++ b/action.yml
@@ -24,6 +24,8 @@ runs:
   using: composite
   steps:
     - uses: denoland/setup-deno@v2
+    - run: echo ${{ inputs.trim-tail-dot-vim == 'false' }}
+      shell: bash
     - id: name
       run: deno run --allow-all src/main.ts ${{ inputs.trim-tail-dot-vim == 'false' && '' || '--trim-tail-dot-vim' }} ${{ github.repository }}
       shell: bash
