--- a/action.yml
+++ b/action.yml
@@ -24,8 +24,9 @@ runs:
   using: composite
   steps:
     - uses: denoland/setup-deno@v2
-    - run: echo ${{ inputs.trim-tail-dot-vim == 'false' }}
-      shell: bash
     - id: name
-      run: deno run --allow-all src/main.ts ${{ inputs.trim-tail-dot-vim == 'true' && '--trim-tail-dot-vim' || '' }} ${{ github.repository }}
+      run:
+        deno run src/main.ts
+        --allow-env=NODE_V8_COVERAGE,JEST_WORKER_ID,GITHUB_EVENT_PATH,GITHUB_EVENT_NAME,GITHUB_SHA,GITHUB_REF,GITHUB_WORKFLOW,GITHUB_ACTION,GITHUB_ACTOR,GITHUB_JOB,GITHUB_RUN_NUMBER,GITHUB_RUN_ID,GITHUB_SERVER_URL,GITHUB_GRAPHQL_URL,no_proxy,NO_PROXY,https_proxy,HTTPS_PROXY
+        ${{ inputs.trim-tail-dot-vim == 'true' && '--trim-tail-dot-vim' || '' }} ${{ github.repository }}
       shell: bash
