--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,20 @@ on:
   workflow_dispatch: null
 jobs:
   check:
+    timeout-minutes: 30
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          persist-credentials: false
+      - uses: denoland/setup-deno@e95548e56dfa95d4e1a28d6f422fafe75c4c26fb # v2.0.3
+      - run: deno task fmt:check
+      - run: deno task check
+      - run: deno task lint
+      - run: deno test
+  dog-fooding:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
