--- a/action.yml
+++ b/action.yml
@@ -23,7 +23,7 @@ outputs:
 runs:
   using: composite
   steps:
-    - uses: denoland/setup-deno@v2
+    - uses: denoland/setup-deno@e95548e56dfa95d4e1a28d6f422fafe75c4c26fb # v2.0.3
     - id: name
       run:
         deno run
