--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,10 +4,39 @@ on:
   push: null
   pull_request: null
   workflow_dispatch: null
+
 jobs:
+  path-filter:
+    timeout-minutes: 5
+    outputs:
+      # keep-sorted start
+      actions: ${{steps.changes.outputs.actions}}
+      deno: ${{steps.changes.outputs.deno}}
+      renovate: ${{steps.changes.outputs.renovate}}
+      # keep-sorted end
+    runs-on: ubuntu-latest
+    permissions: {}
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          persist-credentials: false
+      - uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3.0.2
+        id: changes
+        with:
+          filters: |
+            renovate:
+              - renovate.json5
+            actions:
+              - .github/workflows/*.yml
+              - .github/workflows/*.yaml
+              - action.yml
+            deno:
+              - ./**/*.ts
+              - deno.jsonc
   check:
     timeout-minutes: 30
     runs-on: ubuntu-latest
+    if: needs.path-filter.outputs.deno == 'true'
     permissions:
       contents: read
     steps:
@@ -31,3 +60,15 @@ jobs:
       - uses: ./
         id: normalize
       - run: echo "${{ steps.normalize.outputs.normalizedName }}"
+  status-check:
+    timeout-minutes: 5
+    runs-on: ubuntu-latest
+    needs:
+      - check-format
+      - check-actions
+      - check-deno
+      - check-renovate-config
+    permissions: {}
+    if: failure()
+    steps:
+      - run: exit 1
