--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,43 +1,30 @@
 name: CI
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-  workflow_dispatch:
-
+  push: null
+  pull_request: null
+  workflow_dispatch: null
 jobs:
   check:
+    timeout-minutes: 30
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/actions/setup-deno-with-cache
-      - id: fmt
-        run: deno fmt --check ./**/*.ts
-      - id: lint
-        run: deno lint
-  check-dist:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/actions/setup-deno-with-cache
-      - name: Rebuild the dist/ directory
-        run: deno task bundle
-      - name: Compare the expected and actual dist/ directories
-        run: |
-          if [ "$(git diff --ignore-space-at-eol dist/ | wc -l)" -gt "0" ]; then
-            echo "Detected uncommitted changes after build.  See status below:"
-            git diff
-            exit 1
-          fi
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/actions/setup-deno-with-cache
-      - id: test
-        run: deno test -A
-      - name: Run self
-        uses: ./
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          message: foobar
+          persist-credentials: false
+      - uses: denoland/setup-deno@e95548e56dfa95d4e1a28d6f422fafe75c4c26fb # v2.0.3
+      - run: deno task fmt:check
+      - run: deno task check
+      - run: deno task lint
+      - run: deno test
+  dog-fooding:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+      - uses: ./
+        id: normalize
+      - run: echo "${{ steps.normalize.outputs.normalizedName }}"
