--- a/action.yml
+++ b/action.yml
@@ -18,7 +18,18 @@ inputs:
 outputs:
   normalizedName:
     description: 'Normalized plugin name'
+    value: ${{ steps.name.outputs.normalizedName }}
 
 runs:
-  using: node20
-  main: dist/main.js
+  using: composite
+  steps:
+    - uses: denoland/setup-deno@v2
+    - id: name
+      run:
+        deno run
+        --allow-env=NODE_V8_COVERAGE,JEST_WORKER_ID,GITHUB_OUTPUT
+        --allow-read=/home/runner/work/_temp/_runner_file_commands
+        --allow-write=/home/runner/work/_temp/_runner_file_commands
+        src/main.ts
+        ${{ inputs.trim-tail-dot-vim == 'true' && '--trim-tail-dot-vim' || '' }} ${{ github.repository }}
+      shell: bash
