--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,9 +33,10 @@ jobs:
             deno:
               - ./**/*.ts
               - deno.jsonc
-  check:
+  check-deno:
     timeout-minutes: 30
     runs-on: ubuntu-latest
+    needs: path-filter
     if: needs.path-filter.outputs.deno == 'true'
     permissions:
       contents: read
@@ -50,6 +51,7 @@ jobs:
       - run: deno test
   dog-fooding:
     timeout-minutes: 5
+    needs: path-filter
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -64,10 +66,8 @@ jobs:
     timeout-minutes: 5
     runs-on: ubuntu-latest
     needs:
-      - check-format
-      - check-actions
       - check-deno
-      - check-renovate-config
+      - dog-fooding
     permissions: {}
     if: failure()
     steps:
