--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
       # keep-sorted start
       actions: ${{steps.changes.outputs.actions}}
       deno: ${{steps.changes.outputs.deno}}
+      flake: ${{steps.changes.outputs.flake}}
       renovate: ${{steps.changes.outputs.renovate}}
       # keep-sorted end
     runs-on: ubuntu-latest
@@ -24,6 +25,9 @@ jobs:
         id: changes
         with:
           filters: |
+            flake:
+              - flake.nix
+              - flake.lock
             renovate:
               - renovate.json5
             actions:
@@ -33,22 +37,62 @@ jobs:
             deno:
               - ./**/*.ts
               - deno.jsonc
-  check-deno:
-    timeout-minutes: 30
-    runs-on: ubuntu-latest
+  check-format:
     needs: path-filter
-    if: needs.path-filter.outputs.deno == 'true'
-    permissions:
-      contents: read
+    timeout-minutes: 10
+    runs-on: ubuntu-latest
+    permissions: {}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          persist-credentials: false
+      - name: Install nix
+        uses: cachix/install-nix-action@17fe5fb4a23ad6cbbe47d6b3f359611ad276644c # v31.4.0
+        with:
+          nix_path: nixpkgs=https://github.com/NixOS/nixpkgs/archive/refs/heads/nixpkgs-unstable.tar.gz
+          extra_nix_config: |
+            experimental-features = nix-command flakes pipe-operators
+            access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+      - run: nix flake check
+  check-renovate-config:
+    needs: path-filter
+    if: needs.path-filter.outputs.renovate == 'true' || needs.path-filter.outputs.flake == 'true'
+    timeout-minutes: 10
+    runs-on: ubuntu-latest
+    permissions: {}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          persist-credentials: false
+      - name: Install nix
+        uses: cachix/install-nix-action@17fe5fb4a23ad6cbbe47d6b3f359611ad276644c # v31.4.0
+        with:
+          nix_path: nixpkgs=https://github.com/NixOS/nixpkgs/archive/refs/heads/nixpkgs-unstable.tar.gz
+          extra_nix_config: |
+            experimental-features = nix-command flakes pipe-operators
+            access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+      - name: Validate renovate config
+        run: nix run .#check-renovate-config
+  check-deno:
+    needs: path-filter
+    if: needs.path-filter.outputs.deno == 'true' || needs.path-filter.outputs.flake == 'true'
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    permissions: {}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           persist-credentials: false
-      - uses: denoland/setup-deno@e95548e56dfa95d4e1a28d6f422fafe75c4c26fb # v2.0.3
-      - run: deno task fmt:check
-      - run: deno task check
-      - run: deno task lint
-      - run: deno test
+      - name: Install nix
+        uses: cachix/install-nix-action@17fe5fb4a23ad6cbbe47d6b3f359611ad276644c # v31.4.0
+        with:
+          nix_path: nixpkgs=https://github.com/NixOS/nixpkgs/archive/refs/heads/nixpkgs-unstable.tar.gz
+          extra_nix_config: |
+            experimental-features = nix-command flakes pipe-operators
+            access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+      - run: nix run .#check-deno
   dog-fooding:
     timeout-minutes: 5
     needs: path-filter
@@ -66,8 +110,10 @@ jobs:
     timeout-minutes: 5
     runs-on: ubuntu-latest
     needs:
+      - check-format
       - check-deno
       - dog-fooding
+      - check-renovate-config
     permissions: {}
     if: ${{ failure() }}
     steps:
