--- a/action.yml
+++ b/action.yml
@@ -17,7 +17,7 @@ inputs:
 # Define your outputs here.
 outputs:
   normalizedName:
-    description: 'Normalized plugin name'
+    description: "Normalized plugin name"
     value: ${{ steps.name.outputs.normalizedName }}
 
 runs:
@@ -25,11 +25,5 @@ runs:
   steps:
     - uses: denoland/setup-deno@e95548e56dfa95d4e1a28d6f422fafe75c4c26fb # v2.0.3
     - id: name
-      run:
-        deno run
-        --allow-env=NODE_V8_COVERAGE,JEST_WORKER_ID,GITHUB_OUTPUT
-        --allow-read=/home/runner/work/_temp/_runner_file_commands
-        --allow-write=/home/runner/work/_temp/_runner_file_commands
-        src/main.ts
-        ${{ inputs.trim-tail-dot-vim == 'true' && '--trim-tail-dot-vim' || '' }} ${{ github.repository }}
+      run: deno run --allow-env=NODE_V8_COVERAGE,JEST_WORKER_ID,GITHUB_OUTPUT --allow-read=/home/runner/work/_temp/_runner_file_commands --allow-write=/home/runner/work/_temp/_runner_file_commands src/main.ts ${{ inputs.trim-tail-dot-vim == 'true' && '--trim-tail-dot-vim' || '' }} ${{ github.repository }}
       shell: bash
